--- a/styles/app.css
+++ b/styles/app.css
@@ -150,32 +150,53 @@ body {
 }
 .header-container {
   background: #0ca39e;
-  height: 40px;
+  height: 50px;
   display: flex;
   justify-content: center;
 }
 .header-container .header {
-  width: 800px;
-  display: flex;
-  justify-content: space-around;
-  align-items: center;
-  font-size: 16px;
+  background-color: #0ca39e;
+  box-shadow: 1px 1px 4px 0 rgba(0, 0, 0, 0.1);
+  width: 100%;
+  z-index: 3;
 }
-.header-container .header a {
+.header-container .header ul li {
+  float: left;
+  padding: 18px 0;
+}
+.header-container .header ul li a {
+  padding: 5px 5px;
   color: white;
+  font-size: 1.2em;
 }
-.header-container .header a:hover {
-  color: rgba(0, 0, 0, 0.699);
+.header-container .header .menu {
+  clear: none;
+  float: right;
+  max-height: none;
+  margin-right: 100px;
 }
-.header-container .header .header-links .header-links__link {
-  margin-right: 10px;
+.header-container .header .menu-icon {
+  display: none;
 }
 .header-container .header .header-user {
-  padding: 7px 7px;
+  width: 200px;
+  float: right;
+  margin-right: 125px;
 }
-.header-container .header .header-user__img {
-  margin: 0 2px -7px 0;
-  margin-top: -5px;
+.header-container .header .header-user .header-user__img {
+  float: left;
+  margin: 10px 10px 10px;
+}
+.header-container .header .header-user .header-user__nameUser {
+  display: block;
+  float: left;
+  font-size: 1.5em;
+  padding: 10px 0;
+  text-decoration: none;
+  color: white;
+}
+.header-container .header .menu-btn {
+  display: none;
 }
 input,
 textarea {
@@ -648,45 +669,184 @@ a {
 .error p {
   margin-bottom: 5px;
 }
+@media screen and (max-width: 600px) {
+  .content-container {
+    padding: 0 10px;
+  }
+  .header-container {
+    height: 60px;
+  }
+  .header-container .header .header-user {
+    float: left;
+  }
+  .header-container .header .header-user .header-user__img {
+    display: none;
+  }
+  .header-container .header .header-user .header-user__nameUser {
+    padding-left: 20px;
+  }
+  .header-container .header .menu {
+    clear: both;
+    max-height: 0;
+    transition: max-height 0.2s ease-out;
+    float: right;
+  }
+  .header-container .header .menu-icon {
+    cursor: pointer;
+    display: inline-block;
+    float: right;
+    padding: 28px 20px;
+    position: relative;
+    user-select: none;
+  }
+  .header-container .header .menu-icon .navicon {
+    background: #333;
+    display: block;
+    height: 2px;
+    position: relative;
+    transition: background 0.2s ease-out;
+    width: 25px;
+  }
+  .header-container .header .menu-icon .navicon:before,
+  .header-container .header .menu-icon .navicon:after {
+    background: #333;
+    content: '';
+    display: block;
+    height: 100%;
+    position: absolute;
+    transition: all 0.2s ease-out;
+    width: 100%;
+  }
+  .header-container .header .menu-icon .navicon:before {
+    top: 5px;
+  }
+  .header-container .header .menu-icon .navicon:after {
+    top: -5px;
+  }
+  .header-container .header .menu-btn:checked ~ .menu {
+    max-height: 240px;
+  }
+  .header-container .header .menu-btn:checked ~ .menu-icon .navicon {
+    background: transparent;
+  }
+  .header-container .header .menu-btn:checked ~ .menu-icon .navicon:before {
+    transform: rotate(-45deg);
+  }
+  .header-container .header .menu-btn:checked ~ .menu-icon .navicon:after {
+    transform: rotate(45deg);
+  }
+  .header-container .header .menu-btn:checked ~ .menu-icon:not(.steps) .navicon:before,
+  .header-container .header .menu-btn:checked ~ .menu-icon:not(.steps) .navicon:after {
+    top: 0;
+  }
+  .header-container .header ul {
+    margin: 0;
+    padding: 0;
+    list-style: none;
+    overflow: hidden;
+    background-color: #0ca39e;
+  }
+  .header-container .header ul li {
+    display: block;
+    width: 100%;
+  }
+  .header-container .header ul li a {
+    display: block;
+    padding: 0 20px;
+    text-decoration: none;
+  }
+}
 @media screen and (max-width: 414px) {
   body {
     min-width: 414px;
   }
   .content-container {
     display: block;
+    padding: 0 10px;
     width: 100%;
     height: 100%;
-    padding: 0 10px;
   }
   .page-title {
     display: none;
   }
   .header-container {
+    height: 60px;
+  }
+  .header-container .header .header-user .header-user__img {
+    display: none;
+  }
+  .header-container .header .header-user .header-user__nameUser {
+    padding-left: 20px;
+  }
+  .header-container .header .menu {
+    clear: both;
+    max-height: 0;
+    transition: max-height 0.2s ease-out;
+    float: right;
+  }
+  .header-container .header .menu-icon {
+    cursor: pointer;
+    display: inline-block;
+    float: right;
+    padding: 28px 20px;
+    position: relative;
+    user-select: none;
+  }
+  .header-container .header .menu-icon .navicon {
+    background: #333;
+    display: block;
+    height: 2px;
+    position: relative;
+    transition: background 0.2s ease-out;
+    width: 25px;
+  }
+  .header-container .header .menu-icon .navicon:before,
+  .header-container .header .menu-icon .navicon:after {
+    background: #333;
+    content: '';
     display: block;
     height: 100%;
-  }
-  .header-container .header {
+    position: absolute;
+    transition: all 0.2s ease-out;
     width: 100%;
-    display: block;
-    font-size: 1.5em;
   }
-  .header-container .header .header-links__link {
-    width: 100%;
-    height: 2em;
-    display: block;
+  .header-container .header .menu-icon .navicon:before {
+    top: 5px;
+  }
+  .header-container .header .menu-icon .navicon:after {
+    top: -5px;
+  }
+  .header-container .header .menu-btn:checked ~ .menu {
+    max-height: 240px;
+  }
+  .header-container .header .menu-btn:checked ~ .menu-icon .navicon {
+    background: transparent;
+  }
+  .header-container .header .menu-btn:checked ~ .menu-icon .navicon:before {
+    transform: rotate(-45deg);
+  }
+  .header-container .header .menu-btn:checked ~ .menu-icon .navicon:after {
+    transform: rotate(45deg);
+  }
+  .header-container .header .menu-btn:checked ~ .menu-icon:not(.steps) .navicon:before,
+  .header-container .header .menu-btn:checked ~ .menu-icon:not(.steps) .navicon:after {
+    top: 0;
+  }
+  .header-container .header ul {
+    margin: 0;
+    padding: 0;
+    list-style: none;
+    overflow: hidden;
     background-color: #0ca39e;
-    margin-right: 0;
-    padding: 10px;
-    border-bottom: 1px solid #e6dbdb66;
   }
-  .header-container .header-user {
-    margin-left: 0;
+  .header-container .header ul li {
+    display: block;
+    width: 100%;
   }
-  .header-container .header-user a {
-    color: #83effb;
-  }
-  .header-container .header-user__img {
-    display: none;
+  .header-container .header ul li a {
+    display: block;
+    padding: 0 20px;
+    text-decoration: none;
   }
   .footer-container {
     padding: 30px 0;
@@ -801,6 +961,7 @@ a {
   }
   .user-info-games {
     width: 100%;
+    margin-bottom: 30px;
   }
   .user-info-games .btn-tab {
     width: 100%;
