--- a/styles/app.less
+++ b/styles/app.less
@@ -55,7 +55,7 @@ body {
 
       li {
         float: left;
-        padding: 18px 0;
+        padding: 14px 0;
   
         a {
           padding: 5px 5px;
@@ -85,6 +85,8 @@ body {
       margin-right: 125px;
 
       .header-user__img {
+        width: 23px;
+        height: 23px;
         float: left;
         margin: 10px 10px 10px;  
       }
@@ -293,6 +295,11 @@ input:hover {
       text-align: center;
       width: 400px;
       padding: 0 40px;
+
+      img {
+        width: 200px;
+        height: 200px;
+      }
     }
 
     .properties {
@@ -376,6 +383,8 @@ input:hover {
     width: 600px;
 
     &__img {
+      width: 200px;
+      height: 200px;
       text-align: center;
       padding: 10px 5px;
     }
@@ -458,6 +467,11 @@ input:hover {
     .games {
       border: 1px solid #ccc;
       border-top: none;
+
+      img {
+        width: 100px;
+        height: 100px;
+      }
 
     .game__img:hover {
       transform: scale(1.125); 
